--- a/Model/style.css
+++ b/Model/style.css
@@ -1,7 +1,7 @@
 /* style input*/
 
 body{
-background: rebeccapurple;
+background: url(../img/XrgL6.jpg)no-repeat ;
 }
 
 *{
@@ -14,7 +14,7 @@ background: rebeccapurple;
     padding: 20px 0 0;
     margin-top: 10px;
     width: 100%;
-    max-width: 180px;
+    max-width: 200px;
   }
   
   .form__field {
@@ -23,7 +23,7 @@ background: rebeccapurple;
     border: none;
     border-bottom: 2px solid #000;
     outline: 0;
-    font-size: 17px;
+    font-size: 20px;
     color: #fff;
     padding: 7px 0;
     background: transparent;
@@ -35,7 +35,7 @@ background: rebeccapurple;
   }
   
   .form__field:placeholder-shown ~ .form__label {
-    font-size: 17px;
+    font-size: 20px;
     cursor: text;
     top: 20px;
   }
@@ -68,18 +68,110 @@ background: rebeccapurple;
     font-weight: 700;
   }
   
-  /* reset input */
+
   .form__field:required, .form__field:invalid {
     box-shadow: none;
   }
+
+  /* Fim Style Input*/
+
+
+  
+/*Inicio Button*/
+
+button {
+  --color: #000;
+  font-family: inherit;
+  display: inline-block;
+  width: 6em;
+  height: 2.6em;
+  line-height: 2.5em;
+  overflow: hidden;
+  margin: 20px;
+  font-size: 17px;
+  z-index: 1;
+  color: var(--color);
+  border: 2px solid var(--color);
+  border-radius: 6px;
+  position: relative;
+}
+
+button::before {
+  position: absolute;
+  content: "";
+  background: var(--color);
+  width: 150px;
+  height: 200px;
+  z-index: -1;
+  border-radius: 50%;
+}
+
+button:hover {
+  color: white;
+}
+
+button:before {
+  top: 100%;
+  left: 100%;
+  transition: .3s all;
+}
+
+button:hover::before {
+  top: -30px;
+  left: -30px;
+}
+
+.alingButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+/*fim Button*/
+
+
+  /*Result Input*/
+
+
+
+  /* Fim Result Inpute*/
+
+
 
   .aling{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 230px;
+    margin-top: 130px;
   }
 
   .container{
+    display: flex;
+    justify-content: center;
+    background: #ffffff85;
+    width:300px;
+    height: 400px;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+}
 
+.inp {
+  margin-top: 60px;
+}
+
+
+.Result{
+  margin-top: 30px;
+}
+
+.Result input{
+  width: 200px;
+  height: 30px;
+  padding: 4px;
+  box-shadow: 0px 2px 0px;
+  border: none;
+  outline: 0;
+  font-size: 16px;
 }
