--- a/Model/style.css
+++ b/Model/style.css
@@ -42,7 +42,7 @@ body{
     border-bottom: 2px solid #000;
     outline: 0;
     font-size: 20px;
-    color: #fff;
+    color: #3f3f3f;
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
@@ -168,7 +168,7 @@ button:hover::before {
   }
 
   .Result ::placeholder{
-    color: #646363;
+    color: #313131;
   }
 
   /* Fim Result Inpute*/
