--- a/Model/style.css
+++ b/Model/style.css
@@ -21,7 +21,8 @@ body{
     padding: 20px 0 0;
     margin-top: 10px;
     width: 100%;
-    max-width: 200px;
+    max-width: 230px;
+  
   }
   
   .form__field {
@@ -35,6 +36,7 @@ body{
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
+    margin-left: 20px;
   }
   
   .form__field::placeholder {
@@ -55,6 +57,7 @@ body{
     font-size: 17px;
     color: #fff;
     pointer-events: none;
+    margin-left: 20px;
   }
   
   .form__field:focus {
@@ -146,7 +149,7 @@ button:hover::before {
   }
   
   .Result input{
-    width: 200px;
+    width: 230px;
     height: 30px;
     padding: 4px;
     box-shadow: 0px 2px 0px;
@@ -154,6 +157,7 @@ button:hover::before {
     outline: 0;
     font-size: 16px;
     background: #ffffff48;
+    margin-left: 20px;
   }
 
   .Result ::placeholder{
@@ -221,16 +225,16 @@ body{
 
 .form__field{
   width: 180px;
- margin-left: 9px;
+ margin-left: 50px;
 }
 
 .form__label{
-  margin-left: 10px;
+  margin-left: 50px;
 }
   
 .Result input{
   width: 140px;
-  margin-left:20px;
+  margin-left:65px;
 }
 
 .Result ::placeholder{
@@ -242,4 +246,16 @@ body{
   height: 45px;
   text-align: center;
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  background: #ffffff85;
+  width:250px;
+  height: 400px;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+ 
+  
 }
